package ip2.game;

public class Cards {

private String name;


}
