package ip2.gameboard;

public enum SquareNames {


}
