package ip2.gameboard;

public class Start extends Squares{

    public Start(String name) {
        super(name);
    }
}
