package ip2.gameboard;

public class Tax extends Squares{
    public Tax(String name) {
        super(name);
    }
}
